Menu jumping fix attempt

--- a/css/headerPhone.css
+++ b/css/headerPhone.css
@@ -14,9 +14,9 @@ header nav ul {
     justify-content: center;
     position: fixed;
     background-color: rgba(0,0,0, 0.7);
-    height: 100%;
+    height: 120%;
     width: 0%;
-    top: 0;
+    top: -10%;
     left: 0;
     overflow: hidden;
     transition: 0.3s;
@@ -66,7 +66,5 @@ header nav ul.openMenu {
   -webkit-transform: rotate(45deg) translate(-8px, -8px);
   transform: rotate(45deg) translate(-8px, -4px);
 }
-
-
 
 }
